<resources>
    <string name="app_name" translatable="false">AquaTrouble</string>
    <string name="choose_language" translatable="false">Limba preferata   Choose your language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Choose your language</string>
    <string name="welcomeText">Bine ai venit la,</string>
    <string name="appDescr">"aplicația ce îți face viața mai usoară. "</string>
    <string name="acceptCheckBox">Accept termenii și condițile</string>
    <string name="tosText">Termenii și condițile</string>
    <string name="continueButton">Continuă</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="interstitial_ad_sample" translatable="false">Interstitial Ad Sample</string>
    <string name="start_level" translatable="false">Level 1</string>
    <string name="next_level" translatable="false">Next Level</string>
    <string name="level_text" translatable="false">Level %1$d</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="interstitial_ad_unit_id" translatable="false">YOUR_INTERSTITIAL_AD_UNIT_ID</string>
    <string name="roLang" translatable="false">Română</string>
    <string name="engLang" translatable="false">English</string>
    <string name="search">Caută aici!</string>
    <string name="settings">Setări</string>
    <string name="search_bar_map">Caută sau apasă pe hartă</string>
    <string name="light_blue_background" translatable="false">light blue background</string>
    <string name="statistica">Statistică</string>
    <string name="defectiuni">Defecțiuni</string>
    <string name="acasa">Acasă</string>
    <string name="favorite">Favorite</string>
    <string name="donation">Susține aplicația</string>
    <string name="alege_tema">Alege tema</string>
    <string name="about">Despre</string>
    <string name="defectiuni_curente">Defecțiuni curente</string>
    <string name="harta_termografica">Hartă termică</string>
    <string name="alege_sectorul">Alege sectorul</string>
    <string name="motivational_text">Modifică aplicația cum îți place</string>
    <string name="watchlist">Cartierele urmărite</string>
    <string name="cele_mai_afectate_cartiere">Cele mai afectate cartiere</string>
    <string name="harta">Hartă</string>
    <string name="pornit">Termică</string>
    <string name="oprit">Standard</string>
    <!-- Preference Titles -->
    <string name="messages_header">Setări</string>
    <string name="sync_header">Ajutor</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Susține aplicația</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notif_status_on">Pornite</string>
    <string name="notif_status_off">Oprite</string>
    <string name="notif">Notificări</string>
    <string name="theme_status">Utilizează tema sistemului</string>
    <string name="theme_status_dark">Mod Întunecat</string>
    <string name="theme_status_light">Mod luminos</string>
    <string name="change_theme">Schimbă tema</string>
    <string name="suggestions">Am o sugestie</string>
    <string name="bug_spotting">Am găsit un bug</string>
    <string name="more_info">Mai multe informații</string>
    <string name="damage">avarii</string>
</resources>