<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="@string/settings"
        android:title="@string/settings"
        android:layout="@layout/fragment_settings"/>

    <PreferenceCategory app:title="@string/messages_header">
        <Preference
        app:key="app_donation"
        app:title="@string/signature_title" />

        <ListPreference
            app:defaultValue="notif_on"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="notifications"
            app:title="@string/notif"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="default"
            app:entries="@array/theme_status"
            app:entryValues="@array/theme_status_values"
            app:key="change_theme"
            app:title="@string/change_theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory app:title="Feeback">

        <Preference
            app:key="suggestion"
            app:title="@string/suggestions" />

        <Preference
            app:key="bug_spotting"
            app:title="@string/bug_spotting" />


    </PreferenceCategory>
    <PreferenceCategory app:title="@string/sync_header">

        <Preference
            app:key="faq"
            app:title="FAQ" />

        <Preference
            app:key="tos"
            app:title="@string/tosText" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/more_info">

        <Preference
            app:key="about"
            app:title="@string/about" />


    </PreferenceCategory>


    <Preference
        app:layout="@layout/bottom_root"/>

</PreferenceScreen>