<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FirstFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="16dp">

    <TextView
        android:id="@+id/alegeLimbaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="@string/choose_language"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/alegeLimbaText"
        app:layout_constraintTop_toBottomOf="@+id/alegeLimbaText"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/roCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textAlignment="center"
            android:fontFamily="@font/comfortaa"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_ro_round"
            android:text="@string/roLang"
            app:layout_constraintBottom_toBottomOf="@+id/roFlag"
            app:layout_constraintStart_toStartOf="@+id/alegeLimbaText"
            app:layout_constraintTop_toTopOf="@+id/roFlag" />

        <RadioButton
            android:id="@+id/engLangCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textAlignment="center"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/comfortaa"
            android:textStyle="bold"
            android:textSize="17sp"
            android:drawableEnd="@drawable/ic_uk_round"
            android:text="@string/engLang"
            app:layout_constraintBottom_toBottomOf="@+id/ukFlag"
            app:layout_constraintEnd_toEndOf="@+id/roCheck"
            app:layout_constraintStart_toStartOf="@+id/roCheck"
            app:layout_constraintTop_toTopOf="@+id/ukFlag" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>